--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@ nav a:hover {
     background-color: #555;
 }
 
+/* Dropdown Menu */
 .dropdown {
     display: none;
     position: absolute;
     background-color: #333;
     padding: 10px;
-    width: 150px; /* Adjust dropdown width */
 }
 
 .dropdown li {
@@ -60,7 +60,7 @@ nav li:hover .dropdown {
 }
 
 /* Adjust dropdown position */
-.dropdown {
+nav li:hover .dropdown {
     top: 100%;
     left: 0;
     z-index: 1;
