--- a/style.css
+++ b/style.css
@@ -55,16 +55,17 @@ nav a:hover {
 }
 
 /* Show dropdown on hover */
-nav li:hover .dropdown {
+nav ul li:hover .dropdown {
     display: block;
 }
 
 /* Adjust dropdown position */
-nav li:hover .dropdown {
+.dropdown {
     top: 100%;
     left: 0;
     z-index: 1;
 }
+
 
 /* Artist Info Section Styling */
 .artist {
