--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ nav a:hover {
     background-color: #5d4939; /* Darker shade for contact button */
     color: #fff;
     text-decoration: none;
+    float: right;
 }
 
 .btn.btn-contact:hover {
